--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,12 @@
 [workspace]
-members = ['d01', 'd02', 'd03', 'd04', 'd05']
+members = [
+    'd01',
+    'd02',
+    'd03',
+    'd04',
+    'd05',
+    'd06'
+]
 
 [profile.release]
 lto = 'thin'
