--- a/d01/Cargo.toml
+++ b/d01/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Kristjan Siimson <k.siimson@sportradar.com>"]
 edition = "2018"
 
 [dependencies]
+btoi = "0.4"
 
 [dev-dependencies]
 criterion = "0.3"
